# MiniCompiler

./: CMakeLists.txt  Compiler.c  Connector.c  Dictionary.c  Exchange.c  Lexer.c  Main.c  Node.c  Parser.c  README.md  Server.c  Stack.c  VirtualMachine.c  WebInterface.c  WebSocket.c
include/Compiler/: Compiler.h
include/Connector/: Connector.h  Exchange.h  Server.h
include/General/: Common.h
include/Lexer/: Dictionary.h  Lexeme.h  Lexer.h
include/Parser/: Node.h  Parser.h  Type.h
include/Socket/: Server.h
include/VM/: Instruction.h  Stack.h  VirtualMachine.h
include/WebAPI/: Exchange.h  WebInterface.h  WebSocket.h
